@@ -35,6 +35,7 @@ public:
 	void setupPrinterPropertyDialog(KPrinterPropertyDialog*);
 	void setupConfigDialog(KMConfigDialog*);
 	int pluginPageCap();
+	void setupPrintDialogPages(QList<KPrintDialogPage>*);
 };
 
 #endif
