@@ -15,7 +15,14 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
   	- support for quotas and user access restrictions (in wizard and
 	  print manager)
 	- added missing options in server configuration tool
+  * Possibility to use an external preview program (still need a GUI to
+    configure this).
 
 27/08/2001 Michael Goffioul <goffioul@imec.be>
   * implementation of "Schedule" tab in print dialog for the CUPS plugin
     (job-hold-until attribute).
+  * Printer aliases are now handled gracefully in the LPR plugin (they
+    are actually discarded)
+  * kprinter.cpp: implementation of setPrintProgram() as:
+  	setOption("kde-isspecial", "1");
+	setOption("kde-special-command", cmd);
